--- a/Liverpool/pom.xml
+++ b/Liverpool/pom.xml
@@ -55,4 +55,26 @@
 		    <version>5.1.1</version>
 		</dependency>
   </dependencies>
+  <profiles>
+	  <!-- mvn test -P Regression -->
+	  <profile>
+		  <id>Regression</id>
+		  <build>
+			  <pluginManagement>
+				  <plugins>
+					  <plugin>
+				        <groupId>org.apache.maven.plugins</groupId>
+				        <artifactId>maven-surefire-plugin</artifactId>
+				        <version>3.1.2</version>
+				        <configuration>
+				          <suiteXmlFiles>
+				            <suiteXmlFile>testng.xml</suiteXmlFile>
+				          </suiteXmlFiles>
+				        </configuration>
+				      </plugin>
+				  </plugins>
+			  </pluginManagement>
+		  </build>
+	  </profile>
+  </profiles>
 </project>
